--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,14 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="row">
+    <div class="span4">
+      <%= yield(:side) %>
+    </div>
+    <div class="span8">
+      <%= yield %>
+    </div>
+  </div>
 
 </body>
 </html>
