--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div class="container">
   <div class="row">
     <div class="span4">
       <%= yield(:side) %>
@@ -16,6 +17,7 @@
       <%= yield %>
     </div>
   </div>
+</div>
 
 </body>
 </html>
