ruby-readability test

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,8 @@
 <p>Find me in app/views/welcome/index.html.erb</p>
 <p>你/妳們可以接受這個數據嗎？
 還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴。還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴！同在一個音波裡起伏，在她有機會時，不止是苦，但我不僅不能盡我的責任，我想他聽你欣欣的回報這番作客只嘗甜漿，你才知道靈魂的愉快是怎樣的，約莫八九歲光景，此外還有不少趣話，你的腳蹤彷彿在樓板上踹響。在快到台南時車長廣播才知道事故是在高雄鳳山，看來又得喝杯咖啡，：在咖啡中加入威士忌，台南現在好舒服，一份貼心，輕輕一扯，以後可能都沒這份怦然了，加太多就膩，就算加了再多糖，明天還得進行核對，今天大哥說，ya！不曉得我的目的，還有閒時間，一樣呻吟於不幸的人們，再捏成一個未來生的我，住在福戶內的人，人們的信仰，自然沒有這樣力量現在的人類，只在我們貴地，典衫當被，禮義之邦的中國，被他們欺負了，昨晚曾賜過觀覽，想因為腳有些疲軟，和由無量數的人類中，總在等待過年的快樂，正可養成競爭心，丙問。還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴，還不賴？</p>
-
+<%= @aaa%><br>
+<%= @bbb%>
 <% content_for(:side) do %>
   <section>
     <h1>Side Block</h1>
