fix display of alert

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,15 @@
       <%= yield(:side) %>
     </div>
     <div class="span8 contentblock">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <% unless notice.nil? %>
+        <p class="notice"><%= notice %></p>
+      <% end %>
+      <% unless alert.nil? %>
+        <p class="alert"><%= alert %></p>
+      <% end %>
+
       <%= yield %>
+
     </div>
   </div>
 </div>
