Use gathers list as side menu in welcome and gatehrs controller

--- a/app/views/gathers/index.html.erb
+++ b/app/views/gathers/index.html.erb
@@ -1,3 +1,7 @@
 <% @gathers.each do |g|  %>
-	<%= link_to g.title, gather_path(g) %> <br>
+  <%= link_to g.title, gather_path(g) %> <br>
+<% end %>
+
+<% content_for(:side) do %>
+  <%= render :partial=>"/menu" %>
 <% end %>
