Change default samples, and modify the text extract options to make the result more readible

--- a/app/views/gathers/show.html.erb
+++ b/app/views/gathers/show.html.erb
@@ -1,3 +1,7 @@
 <h1> <%= @gather.title %> </h1>
 
 <p> <%= @gather.content %> </p>
+
+<% content_for(:side) do %>
+  <%= render :partial=>"/menu" %>
+<% end %>
