--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="span12 headblock">
-      <h1>RedMoi</h1>
+      <h1><a href="/">RedMoi</a></h1>
     </div>
   </div>
   <div class="row">
