Implements new and delete method, Redmoi is functioning.

--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -1,5 +1,7 @@
+<p><%= link_to 'NEW', new_gather_path %></p>
 <ul>
 <% @gathers.each do |g| %>
-	<li><%= link_to g.title, gather_path(g) %></li>
+  <li><%= link_to g.title, gather_path(g) %>
+  <%= button_to 'DEL', gather_path(g), :method => :delete %></li>
 <% end %>
 </ul>
