--- a/app/views/gathers/index.html.erb
+++ b/app/views/gathers/index.html.erb
@@ -1,6 +1,4 @@
-<% @gathers.each do |g|  %>
-  <%= link_to g.title, gather_path(g) %> <br>
-<% end %>
+<p>Select your resource at left side...</p>
 
 <% content_for(:side) do %>
   <%= render :partial=>"/menu" %>
