--- a/app/views/gathers/show.html.erb
+++ b/app/views/gathers/show.html.erb
@@ -1,6 +1,6 @@
 <h1> <%= @gather.title %> </h1>
 
-<p> <%= @gather.content %> </p>
+<p> <%= simple_format @gather.content %> </p>
 
 <% content_for(:side) do %>
   <%= render :partial=>"/menu" %>
