--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
 <body>
 
 <div class="container">
+    <div id="user_nav">
+      <% if current_user %>
+        Logged in as <%= current_user.email %>
+      <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+      <% else %>
+        <%= link_to "Sign up", new_user_registration_path %> or
+        <%= link_to "Log in", new_user_session_path %>
+      <% end %>
+    </div>
   <div class="row">
     <div class="span12 headblock">
       <h1><a href="/">RedMoi</a></h1>
