fix: fix exception in welcome page.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,4 @@
-<h1><%== @gather_title %></h1>
-<p><%== @gather_content %></p>
+<p>Welcome! Use the menu on the left to start.</p>
 
 <% content_for(:side) do %>
   <section>
