update: Tune the css styles

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,11 @@
 
     </div>
   </div>
+  <div class="row">
+    <div class="span12 footer">
+      Copyright &copy; 2012
+    </div>
+  </div>
 </div>
 
 </body>
