--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,20 +23,22 @@
       <h1><a href="/">RedMoi</a></h1>
     </div>
   </div>
-  <div class="row">
-    <div class="span3 sideblock">
-      <%= yield(:side) %>
-    </div>
-    <div class="span8 contentblock">
-      <% unless notice.nil? %>
-        <p class="notice"><%= notice %></p>
-      <% end %>
-      <% unless alert.nil? %>
-        <p class="alert"><%= alert %></p>
-      <% end %>
+  <div class="row container">
+    <div class="row">
+      <div class="span3 sideblock">
+        <%= yield(:side) %>
+      </div>
+      <div class="span8 contentblock">
+        <% unless notice.nil? %>
+          <p class="notice"><%= notice %></p>
+        <% end %>
+        <% unless alert.nil? %>
+          <p class="alert"><%= alert %></p>
+        <% end %>
 
-      <%= yield %>
+        <%= yield %>
 
+      </div>
     </div>
   </div>
   <div class="row">
