update: Add original source at the tail of each article.

--- a/app/views/gathers/show.html.erb
+++ b/app/views/gathers/show.html.erb
@@ -1,6 +1,9 @@
 <h1> <%= @gather.title %> </h1>
 
 <p> <%= simple_format @gather.content %> </p>
+<p>
+  <%= link_to 'original source', @gather.url, :target => "_blank" %>
+</p>
 
 <% content_for(:side) do %>
   <%= render :partial=>"/menu" %>
