update: Remove background.

--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -4,7 +4,7 @@ $header-link-color: #ffffff;
 $grey-border: 1px solid #afafaf;
 
 body {
-  background: url(/stripe_red.png);
+  //background: url(/stripe_red.png);
 }
 
 @mixin header-link {
