update: change border width.

--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -1,10 +1,10 @@
 // custom css for Remoi
 $default-bg-color: #ffffff;
 $header-link-color: #ffffff;
-$grey-border: 1px solid #afafaf;
+$grey-border: 10px solid #afafaf;
 
 body {
-  //background: url(/stripe_red.png);
+  background: url(/stripe_red.png);
 }
 
 @mixin header-link {
