update: Change method name.

--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -7,7 +7,7 @@
     <% end %>
   </span>
   <span class="span1" id="menu-edit">
-    <%= link_to_function 'EDIT', 'test()' %>
+    <%= link_to_function 'EDIT', 'edit()' %>
   </span>
 </p>
 
