--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="wrapper">
 <div class="container">
     <div id="user_nav">
       <% if current_user %>
@@ -46,6 +46,7 @@
       Copyright &copy; 2012
     </div>
   </div>
+</div>
 </div>
 
 </body>
