update: Update styles.

--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -29,6 +29,9 @@ body {
   border-bottom: 0px;
   list-style-type: none;
   margin: 20px 5px 5px -20px;
+  .gather-title {
+    font-size: 14px;
+  }
 }
 
 #user_nav {
