--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -10,8 +10,11 @@
     <% @gathers.each do |g| %>
       <li class="menu-li">
         <span class="menu-del"><%= link_to 'x', gather_path(g), :method => :delete %></span>
-        <span class="gather"><%= link_to g.title, gather_path(g) %></span>
+        <span class="gather-title"><%= link_to truncate(g.title, :length => 30), gather_path(g) %></span>
       </li>
+      <% if g != @gathers.last %>
+        <hr />
+      <% end %>
     <% end %>
     </ul>
   <% end %>
