--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
   <div class="row">
     <div class="span12 headblock">
       <h1><a href="/">RedMoi</a></h1>
+      <span class="header-footer">beta</span>
     </div>
   </div>
   <div class="row container">
