--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -15,6 +15,12 @@ body {
   color: $header-link-color;
 }
 
+.inbox {
+  font-family: "Courier New", "Courier";
+  color: #000555;
+  font-size: 1.2em;
+}
+
 .menu-ul {
   hr {
     color: #afafaf;
@@ -92,6 +98,20 @@ body {
 }
 .contentblock {
   padding : 10px 5px;
+  font-family: "Helvetica", "Verdana", "Courier New";
+  line-height: 1.7em;
+  h1 {
+    font-size: 20px;
+  }
+
+  p {
+    line-height: 1.7em;
+    font-size: 1.0em;
+  }
+
+  div {
+    @extend p;
+  }
 }
 .footer {
   background-color: #dfdfdf;
