--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,9 @@
     <div id="user_nav">
       <% if current_user %>
         Logged in as <%= current_user.email %>
+        <% if current_user.admin? %>
+             ( admin )
+        <% end %>
       <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
       <% else %>
         <%= link_to "Sign up", new_user_registration_path %> or
