update: Build admin UI.

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<% content_for(:side) do %>
+<% content_for(:side_admin) do %>
   <section>
-    <%= render :partial => "/menu" %>
+    <%= render :partial => "/admin/admin_menu" %>
   </section>
 <% end %>
 <html>
