update: Turn gathers#show to ajax. And use Settings cache.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           <%= yield(:side_admin) %>
         <% end %>
       </div>
-      <div class="span8 contentblock">
+      <div class="span8 contentblock" id="article-content">
         <% unless notice.nil? %>
           <p class="notice"><%= notice %></p>
         <% end %>
