--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -11,7 +11,7 @@
     <% @gathers.each do |g| %>
       <li class="menu-li">
         <span class="menu-del"><%= link_to 'x', gather_path(g), :method => :delete %></span>
-        <span class="gather-title"><%= link_to truncate(g.title, :length => 30), gather_path(g) %></span>
+        <span class="gather-title"><%= link_to truncate(g.title, :length => 30), gather_path(g), :remote => true %></span>
       </li>
       <% if g != @gathers.last %>
         <hr />
