--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
     <div class="row">
       <div class="span3 sideblock">
         <%= yield(:side) %>
-        <% if current_user.admin? %>
+        <% if current_user && current_user.admin? %>
           <%= yield(:side_admin) %>
         <% end %>
       </div>
