--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -99,18 +99,45 @@ body {
 .contentblock {
   padding : 10px 5px;
   font-family: "Helvetica", "Verdana", "Courier New";
+  overflow: scroll;
   line-height: 1.7em;
+  text-align: justify;
   h1 {
-    font-size: 20px;
+    font-size: 2.0em;
+    margin: 10px 0
+  }
+
+  h2 {
+    margin: 10px 0
+  }
+
+  h3 {
+    margin: 10px 0
+  }
+
+  h4 {
+    margin: 10px 0
   }
 
   p {
-    line-height: 1.7em;
-    font-size: 1.0em;
+    line-height: 1.5em;
+    font-size: 14px;
+    margin: 0 0 1em 0px;
   }
 
   div {
     @extend p;
+  }
+
+  ul {
+    list-style-type: disc;
+  }
+
+  li {
+    line-height: 1.7em;
+    font-size: 14px;
+    margin: 0px 0px 0.25em 0px;
+    text-align: -webkit-match-parent;
   }
 }
 .footer {
