--- a/app/views/gathers/_gather.html.erb
+++ b/app/views/gathers/_gather.html.erb
@@ -3,4 +3,8 @@
   <span class="span2"><%= link_to 'original source', @gather.url, :target => "_blank" %></span>
 </div>
 <hr />
-<%= @gather.content.html_safe %>
+<div class="row">
+  <div class="content-div">
+    <%= @gather.content.html_safe %>
+  </div>
+</div>
