--- a/app/views/gathers/show.js.erb
+++ b/app/views/gathers/show.js.erb
@@ -1,1 +1,1 @@
-$('#article-content').html("<%= j(render :partial => 'gather') %>");
+$('.contentblock').html("<%= j(render :partial => 'gather') %>");
