--- a/app/views/_menu.html.erb
+++ b/app/views/_menu.html.erb
@@ -2,7 +2,7 @@
 
   <p>
     <%= link_to '<i class="icon-plus icon-white"></i> New URL'.html_safe, new_gather_path, :class => "btn btn-primary btn-mini" %>
-    <%= link_to_function '<i class="icon-pencil icon-white"></i> Edit List'.html_safe, 'edit()', :class => "btn btn-primary btn-mini", :id => "menu-edit" %>
+    <%= link_to_function '<i class="icon-pencil icon-white"></i> <span id="edit-label">Edit List</span>'.html_safe, 'edit()', :class => "btn btn-primary btn-mini", :id => "menu-edit" %>
   </p>
   <div id="menu-content">
     <p class="inbox">Inbox ( <span id="inbox-size"><%= @gathers.size %></span> / <%= Settings.article_limit %> )</p>
