--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -44,7 +44,7 @@ body {
   color:#ffffff;
   padding-right: 20px;
   margin-right: -20px;
-  background-color: #000000;
+  background: #000000;
   text-align: right;
 
   a {
@@ -61,7 +61,7 @@ body {
 
 .headblock {
   padding : 5px 10px;
-  background-color : #000000;
+  background: #000000 url('/redmoi-logo-small.png') no-repeat right top;
   color : #ffffff;
   border-radius : 0 0 20px 0;
   h1 {
