update: Redirect to the new page after create.

--- a/app/assets/stylesheets/redmoi.css.scss
+++ b/app/assets/stylesheets/redmoi.css.scss
@@ -108,8 +108,7 @@ body {
 .contentblock {
   padding : 10px 5px;
   font-family: "Helvetica", "Verdana", "Courier New";
-  overflow: auto;
-  overflow-y: hidden;
+  overflow: hidden;
   line-height: 1.7em;
   text-align: justify;
   h1 {
