--- a/app/views/admin/gathers/show.html.erb
+++ b/app/views/admin/gathers/show.html.erb
@@ -13,9 +13,18 @@
 <div class="row">
   <span class="span2">Owner:</span><span class="span4"><%= link_to @user.email, admin_user_path(@user) %></span>
 </div>
+
+<div class="row">
+  <span class="span2">Gather path:</span><span class="span4"><%= link_to gather_path(@gather), gather_path(@gather) %></span>
+</div>
+
+<div class="row">
+  <span class="span2">Original URL:</span><span class="span4"><%= link_to truncate(@gather.url), @gather.url %></span>
+</div>
+
 <hr/>
 
 <div class="row">
-  <span class="span8"><%= simple_format @gather.content %></span>
+  <span class="span8"><%= @gather.content.html_safe %></span>
 </div>
 
