--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -12,6 +12,7 @@ count: <%= @users.size %>
   <div class="row">
     <span class="span1"><%= u.id %></span>
     <span class="span3"><%= link_to u.email, admin_user_path(u) %></span>
-    <span class="span3"><%= link_to 'delete', admin_user_path(u), :method => :delete %></span>
+    <span class="span2"><%= u.created_at %></span>
+    <span class="span1"><%= link_to 'delete', admin_user_path(u), :method => :delete %></span>
   </div>
 <% end %>
