new: Add username.

--- a/app/views/layouts/_template.html.erb
+++ b/app/views/layouts/_template.html.erb
@@ -38,7 +38,7 @@
       </div>
       <div class="span8 contentblock" id="article-content">
         <% unless notice.nil? %>
-          <p class="notice"><%= notice %></p>
+          <p class="alert alert-success"><%= notice %></p>
         <% end %>
         <% unless alert.nil? %>
           <p class="alert"><%= alert %></p>
