--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
 
   <div class="inputs">
   	<%= f.input :username, :required => true, :autofocus => true %>
-    <%= f.input :email, :required => true %>
+    <%= f.input :email, :required => true, :autofocus => true %>
     <%= f.input :password, :required => true %>
     <%= f.input :password_confirmation, :required => true %>
   </div>
