new: Use new js to handle adding resource.

--- a/app/views/gathers/destroy.js.erb
+++ b/app/views/gathers/destroy.js.erb
@@ -1,2 +1,2 @@
-$('#gather_<%= @gather.id %>').hide('slow');
+$('#gather_<%= @gather.id %>').fadeOut('500');
 $('#inbox-size').html(<%= @gathers.size %>)
