--- a/app/views/gathers/show.js.erb
+++ b/app/views/gathers/show.js.erb
@@ -1,1 +1,6 @@
 $('.contentblock').html("<%= j(render :partial => 'gather') %>");
+
+$(document).ready(
+function() {
+  $('img').error(function() {$(this).remove();});
+});
