--- a/app/views/gathers/show.js.erb
+++ b/app/views/gathers/show.js.erb
@@ -1,4 +1,4 @@
-$('.contentblock').html("<%= j(render :partial => 'gather') %>");
+$('.contentblock').html("<%= j(render :partial => 'gather', :locals => {:g => @gather}) %>");
 
 $(document).ready(
 function() {
