update: Add titile in show view.

--- a/app/views/gathers/_gather.html.erb
+++ b/app/views/gathers/_gather.html.erb
@@ -3,6 +3,7 @@
   <span class="delete-source"><%= link_to '<i class="icon-remove icon-white"></i> delete'.html_safe, gather_path(g), :class => 'btn btn-primary btn-mini', :method => :delete %></span>
 </div>
 <div class="article-title">
+  <%= g.title %>
 </div>
 <hr />
 <div class="row">
